Prevent the field in the fee buttons to be overflowed

--- a/src/ui/components/form/fee-buttons.module.scss
+++ b/src/ui/components/form/fee-buttons.module.scss
@@ -18,11 +18,11 @@
     }
 
     .fiat {
-      font-size: 4px;
+      font-size: 10px;
     }
 
     .coin {
-      font-size: 4px;
+      font-size: 10px;
     }
   }
 }
